<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>fqdemo_msgs</name>
  <version>0.0.0</version>
  <description>Custom message definitions accompanying fqdemo full quality demo template</description>
  <maintainer email="kent@caspia.com">R. Kent James</maintainer>
  <author email="kent@caspia.com">R. Kent James</author>
  <license>Apache 2</license>
  <url type="repository">https://github.com/rosdabbler/fqdemo</url>
  <!-- demo that urls as unnumbered lists work with a missing url -->
  <!--url type="website">https://rosdabbler.github.io/fqdemo/fqdemo_msgs</url-->
  <url type="bugtracker">https://github.com/rosdabbler/fqdemo/issues</url>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <build_depend>rosidl_default_generators</build_depend>
  <exec_depend>rosidl_default_runtime</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <member_of_group>rosidl_interface_packages</member_of_group>

  <export>
    <build_type>ament_cmake</build_type>
    <rosdoc2>rosdoc2.yaml</rosdoc2>
  </export>
</package>
