<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>fqdemo_nodes</name>
  <version>0.1.0</version>
  <description>Demo of a ros2 package with full integration of test, ci, quality, docs, etc.</description>
  <maintainer email="kent@caspia.com">R. Kent James</maintainer>
  <author email="kent@caspia.com">R. Kent James</author>
  <license>Apache License 2.0</license>
  <url type="repository">https://github.com/rosdabbler/fqdemo</url>
  <url type="website">https://rosdabbler.github.com/fqdemo/fqdemo_nodes</url>
  <url type="bugtracker">https://github.com/rosdabbler/fqdemo/issues</url>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>ament_cmake_python</buildtool_depend>

  <test_depend>ament_cmake_gtest</test_depend>
  <test_depend>ament_lint_common</test_depend>
  <test_depend>python3-pytest</test_depend>
  <test_depend>ament_cmake_pytest</test_depend>

  <depend>rclcpp</depend>
  <depend>rclpy</depend>
  <depend>fqdemo_msgs</depend>
  <export>
    <build_type>ament_cmake</build_type>
    <rosdoc2>rosdoc2.yaml</rosdoc2>
  </export>
</package>
